assets/css/style.css
/* ... */
#arrow-down {
    color: rgb(101, 202, 88);
    text-align: right;
    position: relative;
    font-size: 5rem;
    animation-name: arrow-movement;
    animation-duration: 2s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    right: 4rem;
    float: right;
    text-shadow: 4px 4px 10px black;
}

/* products */
#products-grid-container {
    width: 100%;
    display: grid;
    grid-template-columns:2fr 2fr 1fr;
    grid-template-areas: "a a a"
                         "c d e"
                         "g h i"
                         "k l m";
                         
    text-align: center;
}

.section-logo {
    height: 4rem;
    line-height: 4rem;
    letter-spacing: 8px;
    font-size: 1.5rem;
    grid-area: a;
    text-align: center;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-1 {
    grid-area: c;

}

#product-1-info {

    text-align: left;
    grid-area: d;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-1-info p{
    padding-left: 1rem;
}

#product-1-buy {
    grid-area: e;
}

#grey-top-line{
    background-color: rgba(0, 0, 0, 0.26);
    height: 2rem;
    width: 100%;
}
#product-2 {
    grid-area: g;
}

#product-2-info {
    
    
    text-align: left;
    grid-area: h;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-2-info p{
    padding-left: 1rem;
}


#product-2-buy {
    grid-area: i;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}
#product-3 {
    grid-area: k;

}

#product-3-info {
 
    
    text-align: left;
    grid-area: l;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#product-3-info p{
    padding-left: 1rem;
}

#product-3-buy {
    grid-area:m;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
}

#products-grid-container img{
    width: 100%;
    min-height: 100%;
    margin-bottom: 0;
}


.shop-button{
    margin-top: 5rem;
    width: 6rem;
    height:3rem;
    margin-left: auto;
    margin-right: auto;
    font-size: 1rem;
    box-shadow: inset 0 0 5px 5px rgba(119, 119, 119, 0.493);
    border-radius: 8px;
    padding-top: 0.5rem;
    background-color: rgba(60, 187, 60, 0.623);
    margin-bottom: 1rem;
}

.shop-button p{
    font-size: 0.5rem;
}

/* About */
#about {
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
    margin: 0 auto;
    font-size: 1rem;
    margin-bottom: 1rem;
}

#about h2{
    margin-bottom: 1rem;
}

#about-grid-container{
    max-width: 80%;
    margin-left: auto;

    margin-right: auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "a b"
                         "c c";
}

#section-a {
    grid-area: a;
    background-color: rgba(60, 187, 60, 0.623);
    padding: 1rem;
    border-radius: 1rem 0 0 1rem;
    
}
#section-b {
    grid-area: b;
    background-color: rgba(60, 187, 60, 0.623);
    padding: 0.5rem;
    border-radius: 0 1rem 1rem 0;
}
#section-c {
    margin-top: 1rem ;
    grid-area: c;
    background-color: rgba(60, 187, 60, 0.623);
    padding: 1rem;
    border-radius: 1rem;
    
}
#options {
list-style: inside;
}
#options ul{
    padding: 0 0 0 2rem;
    

}

/* purchase form */
section h2{
    text-align: center;
}

form{
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: rgba(60, 187, 60, 0.623);
    width:fit-content;
    margin: 1rem auto;
    border-radius: 1rem;
}

.fieldset-styling{
    border-style: none;
    margin: 1rem 1rem;
}

select {
    color: black;
}


#submit {
    width: 70%;
    padding: 1rem;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
    font-size: 2rem;
    background-color: rgb(120, 223, 106);
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
    border-radius: 10px;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
    margin: 0 15%;
}

/* footer */
#footer-grid-container {
    width: 100%;
    overflow: hidden;
    background-color: rgb(231, 231, 231);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-areas: "a a a a"
        "b b c c"
        "d d d d";
    text-align: center;
    
}

#footer-grid-container>.section-logo {
    font-size: 2rem;
    grid-area: a;
    text-align: center;
}

#footer-grid-container>#section-opening-hours {
    text-align: center;
    grid-area: b;
}

#footer-grid-container>#section-contact {
    text-align: center;
    grid-area: c;
}

#footer-grid-container>#section-social {
    grid-area: d;
    text-align: center;
}

#section-social {
    word-spacing: 1rem;
    padding-bottom: 1rem;
    font-size: 2rem;
}

#section-social p {
    font-size: 2rem;
    word-spacing: normal;
}

/* psuedo */

a:hover{
    cursor: crosshair;
    color:rgb(65, 219, 51);
}

/* dropdown menu */
#dropdown-menu:hover ul{
    line-height: 2rem;
    opacity: 1;
}
/* form psuedo */
#submit:hover {
    transform: scale(1.2);
    box-shadow: 0px 0px 30px 20px rgba(51, 230, 75, 0.568);
}

input:focus{
    background-color: rgba(135, 216, 139, 0.664);
}

input:hover{
    color:green;
}


/* welcome animation */
@keyframes welcome-slide-up {
    from {
        top: 0;
    }

    to {
        top: -100%;
        visibility: hidden;
    }
}

@keyframes welcome-slide-right {
    from {
        right: 0;
    }

    to {
        right: -100%;
        visibility: hidden;
    }
}

@keyframes welcome-slide-bottom {
    0% {
        bottom: 0;
    }

    30% {
        visibility: hidden;
    }

    100% {
        bottom: -100%;
        visibility: hidden;
    }
}

@keyframes welcome-slide-left {
    from {
        left: 0;
    }

    to {
        left: -100%;
        visibility: hidden;
    }
}

@keyframes welcome-make-inactive {
    from {
        visibility: visible;
    }

    to {
        visibility: hidden;
    }
}
/* arrow animation */
@keyframes arrow-movement {
    0% {
        top: -4rem;
    }

    50% {
        top: 0rem;
    }

    100% {
        top: -4rem;
    }
}
/* ... */

